# libpg_query

./: CMakeLists.txt  Makefile  pg_query.h
src/: pg_query_internal.h  pg_query_parse.c
src/postgres/: src_backend_nodes_nodeFuncs.c  src_backend_storage_ipc_ipc.c
